--- a/rebar.config
+++ b/rebar.config
@@ -25,5 +25,5 @@
 
 {deps,
  [
-  {ibrowse, ".*", {git, "git://github.com/cmullaparthi/ibrowse.git", "HEAD"}}
+%%   {ibrowse, ".*", {git, "git://github.com/cmullaparthi/ibrowse.git", "HEAD"}}
  ]}.
